plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'ru.sfedu.simplepsy-specialist'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
//    implementation group: 'io.micrometer', name: 'micrometer-tracing-bridge-brave'
//    implementation group: 'io.zipkin.reporter2', name: 'zipkin-reporter-brave'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.telegram:telegrambots-spring-boot-starter:6.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
    implementation group: 'org.hibernate', name: 'hibernate-validator', version: '8.0.0.Final'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '6.2.0'
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
}

tasks.named('test') {
    useJUnitPlatform()
}
